# OpenMetaVerse

./: .gitignore  Developers.md  Portals.md  README.md  Roadmap.md  SpaceBuilding.md
W3D-Server/: Cargo.toml
W3D-Server/src/: main.rs  main_stable.rs
W3D/Assets/: SceneExportSettings.asset
W3D/Assets/Editor/: FbxToGltfExporter.cs  SceneExportSettings.cs  SceneExportSettingsWindow.cs  SceneExporter.cs  SceneImporter.cs  SpaceExporter.cs  SpaceImporter.cs
W3D/Assets/Events/: EventBus.cs
W3D/Assets/ExportedGLTF/: GoblinShack.gltf
W3D/Assets/ExportedGLTF/A_Goblin_shack_with_a_0515051956_texture/: A_Goblin_shack_with_a_0515051956_texture.gltf
W3D/Assets/ExportedGLTF/Blue_glowing_crystal__0515052952_texture/: Blue_glowing_crystal__0515052952_texture.gltf
W3D/Assets/Managers/: NetworkManager.cs  SpaceImporterRuntime.cs  SpaceSceneManager.cs
W3D/Assets/Models/: ExportedScene.cs  ExportedSpace.cs  ModelReference.cs  SpaceLoader.cs  SpaceObjectFactory.cs
W3D/Assets/Resources/: UnityGLTFSettings.asset
W3D/Assets/Resources/Materials/: BasicBlack.mat  BasicBlue.mat  BasicGreen.mat  BasicRed.mat  (+2 more)
W3D/Assets/Scenes/: SampleScene.unity
W3D/Assets/Scripts/: ExportedSceneData.cs  ExportedSpaceData.cs  FirstPersonController.cs  FirstPersonVRController.cs  ModelReference.cs  NoExport.cs
W3D/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
W3D/Assets/WorldScripts/: PortalLink.cs  SpawnPoint.cs
W3D/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
W3D/SceneJson/: Space.json  TestSpace.json  scene.json  sceneExportTest.json
(+3 files in other folders)
