[package]
name = "W3D-Server"
version = "0.1.0"
edition = "2021"  # use 2021 — "2024" is not stable yet

[dependencies]
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4"] }


